tests/bad/while_as_return/main.sm
(module Main imports (StdLib))

(vars ())

(functions (
  (function main ()
    (begin
      (let x 0)
      (while (< x 10)
      (begin
        (set! x (+ x 1)))
      )
    )
  )
))
